--- a/assets/scss/_default/list.scss
+++ b/assets/scss/_default/list.scss
@@ -1,7 +1,18 @@
 @include themify($themes) {
+    .list-logo {
+        transition: transform 0.15s ease, box-shadow 0.15s ease;
+    }
+
+    .list-logo:hover {
+        transform: scale(1.05);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    }
+
     .list {
         background-color: themed("website-background");
-        padding-bottom: calc( ( 100% - #{$width-percent-of-screen} ) );;
+        padding-bottom: calc( ( 100% - #{$width-percent-of-screen} ) );
+        width: 100%;
+        position: relative;
 
         .list-logo {
             z-index: 2;
@@ -36,15 +47,14 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            position: relative;
         }
         
         .list-pagetitle {
             position: absolute;
-            text-align: center;
             padding: 17px;
             top: 150px;
-            width: 100%;
+            left:0px;
+            width: calc(100% - 35px);
             font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             font-weight: 400;
             font-stretch: bolder;
@@ -57,7 +67,8 @@
                 1px -1px 0 black, /* Oben rechts */
                 -1px  1px 0 black, /* Unten links */
                 1px  1px 0 black; /* Unten rechts */
-        }
+                text-align: center;
+            }
 
         .list-pagedescription {
             font-size: 18px;
@@ -162,6 +173,10 @@
     }
 
     @media (max-width: 840px) {
+        .list .list-pagetitle {
+            font-size: calc(var(--viewable-height) / 8);
+        }
+
         .list-container {
             margin: 0 auto;
             width: calc( #{$width-percent-of-screen} - 2px );
@@ -206,7 +221,25 @@
         }
     }
 
-    @media (max-width: 1080px) {
+    @media (max-width: 500px) {
+        .list .list-pagetitle {
+            font-size: calc(var(--viewable-height) / 10);
+        }
+    }
+
+    @media (max-width: 320px) {
+        .list .list-pagetitle {
+            font-size: calc(var(--viewable-height) / 14);
+        }
+    }
+    
+    @media (max-width: 230px) {
+        .list .list-pagetitle {
+            font-size: calc(var(--viewable-height) / 20);
+        }
+    }
+
+    @media (max-width: 500px) {
         .list .list-logo {
             width: $logo-klein-width;
         }
