--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -28,6 +28,7 @@ $themes: (
     logo-green: rgb(0, 122, 94),
     // logo-yellow: rgba(254, 209, 10, 1),
     logo-yellow: rgb(252, 209, 22),
+    logo-yellow-60: rgba(252, 209, 22, 0.6),
     // logo-green-transparent: rgba(8,129,98, 0.2),
     // logo-yellow-transparent: rgba(254, 209, 10, 0.2),
     // logo-red: rgba(209,18,39,1),
