--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,9 @@
               {{ dateFormat "Monday, Jan 2, 2006" .Date }}
           </div>
         </div>
-        {{ .Content }}
+        <div class="single-content">
+          {{ .Content }}
+      </div>
       </div>
     </div>
   </div>
