--- a/assets/scss/_default/single.scss
+++ b/assets/scss/_default/single.scss
@@ -1,5 +1,5 @@
 @include themify($themes) {
-    .single {
+  .single {
         background-color: themed("website-background");
         font-size: 18px;
 
@@ -8,6 +8,19 @@
             text-align: left;
             padding-top: 10px;
             // margin-bottom: 10px;
+        }
+
+        .single-contents {
+          padding-left: 30px;
+          padding-right: 30px;
+          background: linear-gradient(to bottom, themed(logo-green), #FFFFFF);
+        }
+
+        .single-content {
+          max-width: 800px;
+          margin-left: calc((100% - 800px) / 2);
+          background-color: themed(website-background);
+          padding: 10px
         }
 
         .single-logo {
@@ -29,6 +42,15 @@
             display: block;
         }
 
+        .single-logo {
+          transition: transform 0.15s ease, box-shadow 0.15s ease;
+        }
+    
+        .single-logo:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        
         .logo-klein {
             height: auto;
             width: 90%;
@@ -36,7 +58,7 @@
         }
 
         .single-picture {
-            height: calc(var(--viewable-height) - #{$logo-height} + 0px);
+            height: calc(var(--viewable-height) - 30px);
         }
 
         .single-picture-main {
@@ -44,13 +66,7 @@
             height: 100%;
             object-fit: cover;
         }
-        .single-contents {
-            //width: calc( #{$width-percent-of-screen} - 2px );
-            // margin-left: 30px;
-            // margin-right: 30px;
-            padding-left: 30px;
-            padding-right: 30px;
-        }
+
 
         .single-pagetitle {
             position: absolute;
@@ -133,10 +149,10 @@
         
         .imagemd-caption  {
             width: 600px;
-            border-color: themed("logo-yellow");
+            border-color: themed("logo-yellow-60");
             border-width: 2px;
             border-style: solid;
-            background-color: themed("logo-yellow");
+            background-color: themed("logo-yellow-60");
             padding: 5px 0px;
             text-align: center;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -167,9 +183,9 @@
           }
 
           .kleine-tabelle thead th {
-            background: themed(logo-yellow);
+            background: themed(logo-yellow-60);
             padding: 5px 16px;
-            border-bottom: 2px solid themed(logo-yellow);
+            border-bottom: 2px solid themed(logo-yellow-60);
             position: sticky;
             top: 0; /* Fixiert die Kopfzeile */
             z-index: 1;
@@ -177,22 +193,22 @@
 
           .kleine-tabelle thead th:last-child {
             text-align: right;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
             width: 200px;
           }
 
           .kleine-tabelle tbody {
             display: block;
             overflow: hidden;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
           }
           
           .kleine-tabelle tbody td {
             padding: 8px 16px;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
             text-align: left;
             vertical-align: middle;
-            background-color: themed(website-background);
+            background-color: themed(website-background-60);
           }
 
           .kleine-tabelle tbody td:last-child {
@@ -225,9 +241,9 @@
           }
 
           .finanzen-tabelle thead th {
-            background: themed(logo-yellow);
+            background: themed(logo-yellow-60);
             padding: 5px 16px;
-            border-bottom: 2px solid themed(logo-yellow);
+            border-bottom: 2px solid themed(logo-yellow-60);
             position: sticky;
             top: 0; /* Fixiert die Kopfzeile */
             z-index: 1;
@@ -235,18 +251,18 @@
           
           .finanzen-tabelle thead th:first-child {
             // text-align: right;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
             width: 150px;
           }
 
           .finanzen-tabelle thead th:last-child {
             // text-align: right;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
             width: 150px;
           }
 
           .finanzen-tabelle tbody {
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
 
 
             display: block;
@@ -257,7 +273,7 @@
           
           .finanzen-tabelle tbody td {
             padding: 4px 16px;
-            border: 2px solid themed(logo-yellow);
+            border: 2px solid themed(logo-yellow-60);
             text-align: left;
             vertical-align: middle;
             background-color: themed(website-background);
